kustomize/04-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
  namespace: spring-petclinic
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  selector:
    app: api-gateway
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customers-service
  name: customers-service
  namespace: spring-petclinic
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: customers-service
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vets-service
  name: vets-service
  namespace: spring-petclinic
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: vets-service
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: visits-service
  name: visits-service
  namespace: spring-petclinic  
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: visits-service
status:
  loadBalancer: {}
