kustomize/05-mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-mysql
  namespace: spring-petclinic
  labels:
    app: spring-petclinic
spec:
  ports:
    - port: 3306
  selector:
    app: spring-petclinic
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-mysql
  namespace: spring-petclinic
  labels:
    app: spring-petclinic
spec:
  selector:
    matchLabels:
      app: spring-petclinic
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring-petclinic
        tier: mysql
    spec:
      containers:
      - image: ghcr.io/mrporcles/spring-petclinic-cloud/mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
