kustomize/07-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  namespace: spring-petclinic
  name: spring-petclinic
spec:
  virtualhost:
    fqdn: petclinic.10.220.30.26.nip.io
  routes:
    - conditions:
      - prefix: /
      services:
        - name: api-gateway
          port: 80
